updated gap issue in archive

--- a/wp-content/themes/sgsturf/assets/css/tailwind.css
+++ b/wp-content/themes/sgsturf/assets/css/tailwind.css
@@ -576,19 +576,6 @@ video {
   position: relative;
 }
 
-.inset-x-1\/2 {
-  left: 50%;
-  right: 50%;
-}
-
-.bottom-10 {
-  bottom: 2.5rem;
-}
-
-.right-10 {
-  right: 2.5rem;
-}
-
 .bottom-5 {
   bottom: 1.25rem;
 }
@@ -603,10 +590,6 @@ video {
 
 .order-2 {
   order: 2;
-}
-
-.col-span-6 {
-  grid-column: span 6 / span 6;
 }
 
 .col-span-full {
@@ -629,10 +612,6 @@ video {
   grid-column-start: 8;
 }
 
-.col-start-13 {
-  grid-column-start: 13;
-}
-
 .col-end-12 {
   grid-column-end: 12;
 }
@@ -653,23 +632,14 @@ video {
   grid-column-end: 7;
 }
 
-.m-4 {
-  margin: 1rem;
+.mx-5 {
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
 }
 
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
-}
-
-.mx-10 {
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
-}
-
-.mx-5 {
-  margin-left: 1.25rem;
-  margin-right: 1.25rem;
 }
 
 .mb-10 {
@@ -724,10 +694,6 @@ video {
   width: 50%;
 }
 
-.w-1\/3 {
-  width: 33.333333%;
-}
-
 .w-full {
   width: 100%;
 }
@@ -738,10 +704,6 @@ video {
 
 .resize {
   resize: both;
-}
-
-.flex-row {
-  flex-direction: row;
 }
 
 .flex-col {
@@ -786,6 +748,10 @@ video {
 
 .gap-0 {
   gap: 0px;
+}
+
+.gap-1 {
+  gap: 0.25rem;
 }
 
 .gap-16 {
@@ -960,12 +926,12 @@ body {
 }
 
 @media (min-width: 768px) {
-  .md\:right-10 {
-    right: 2.5rem;
-  }
-
   .md\:bottom-10 {
     bottom: 2.5rem;
+  }
+
+  .md\:right-10 {
+    right: 2.5rem;
   }
 
   .md\:order-1 {
@@ -1000,6 +966,10 @@ body {
     grid-column-end: 10;
   }
 
+  .md\:col-end-12 {
+    grid-column-end: 12;
+  }
+
   .md\:col-end-13 {
     grid-column-end: 13;
   }
@@ -1008,20 +978,16 @@ body {
     grid-column-end: 4;
   }
 
+  .md\:col-end-6 {
+    grid-column-end: 6;
+  }
+
   .md\:col-end-7 {
     grid-column-end: 7;
   }
 
   .md\:col-end-8 {
     grid-column-end: 8;
-  }
-
-  .md\:col-end-6 {
-    grid-column-end: 6;
-  }
-
-  .md\:col-end-12 {
-    grid-column-end: 12;
   }
 
   .md\:m-0 {
@@ -1033,16 +999,16 @@ body {
     margin-right: 2.5rem;
   }
 
+  .md\:mb-0 {
+    margin-bottom: 0px;
+  }
+
   .md\:mb-4 {
     margin-bottom: 1rem;
   }
 
   .md\:mb-5 {
     margin-bottom: 1.25rem;
-  }
-
-  .md\:mb-0 {
-    margin-bottom: 0px;
   }
 
   .md\:mb-8 {
@@ -1055,10 +1021,6 @@ body {
 
   .md\:inline-block {
     display: inline-block;
-  }
-
-  .md\:hidden {
-    display: none;
   }
 
   .md\:h-full {
@@ -1085,10 +1047,6 @@ body {
     flex-direction: row;
   }
 
-  .md\:flex-col {
-    flex-direction: column;
-  }
-
   .md\:flex-wrap {
     flex-wrap: wrap;
   }
@@ -1109,16 +1067,16 @@ body {
     justify-content: space-between;
   }
 
+  .md\:gap-2 {
+    gap: 0.5rem;
+  }
+
   .md\:gap-4 {
     gap: 1rem;
   }
 
   .md\:gap-8 {
     gap: 2rem;
-  }
-
-  .md\:gap-2 {
-    gap: 0.5rem;
   }
 
   .md\:p-10 {
@@ -1221,10 +1179,6 @@ body {
 
   .lg\:min-h-\[700px\] {
     min-height: 700px;
-  }
-
-  .lg\:flex-initial {
-    flex: 0 1 auto;
   }
 
   .lg\:flex-col {
